tests/thymeleaf-tests-spring5/src/test/resources/templateengine/springintegration/errors/errors27.thtest
%EXTENDS ../springintegration.common
# ------------------------------------------------------------
%CONTEXT

bindingError01 = #{ 'binding' : 'formBean01_01',\
                    'field' : 'name',\
                    'message' : 'Name has to be < than \\'aa\\''}
bindingError02 = #{ 'binding' : 'formBean01_01',\
                    'field' : null,\
                    'message' : 'Name has to be >= than \\'ab\\''}
                    
bindingErrors = { bindingError01, bindingError02 }
# ------------------------------------------------------------
%INPUT
<form action="#" th:action="@{/process}" th:object="${formBean01_01}" method="post">
  <ul>
    <li th:each="e : ${#fields.detailedErrors()}" th:text="${e}">...</li>
  </ul>
</form>
# ------------------------------------------------------------
%OUTPUT
<form action="/testing/process" method="post">
  <ul>
    <li>[global]:Name has to be &gt;= than &#39;ab&#39;</li>
    <li>name:Name has to be &lt; than &#39;aa&#39;</li>
  </ul>
</form>
